fix footer on mobile

--- a/src/components/Footer/Footer.component.css
+++ b/src/components/Footer/Footer.component.css
@@ -36,7 +36,7 @@
 }
 
 @media screen and (max-width: 641px) {
-  .footer__contacts {
+  .footer__contacts.container {
     flex-direction: column-reverse;
   }
 
